k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisgeek
  namespace: default
spec:
  defaultBackend:
    service:
      name: concourse-web
      port:
        name: atc
